<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/postTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:foregroundGravity="center">

        <ImageView
            android:id="@+id/postImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/post_image"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/noImageIcon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:contentDescription="@string/no_image"
            android:src="@android:drawable/ic_menu_report_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/openOriginalButton"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="#66000000"
                android:contentDescription="@string/open_original"
                android:padding="10dp"
                android:src="@drawable/ic_reels_original"
                android:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/openCommentsButton"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="#66000000"
                android:contentDescription="@string/open_comments"
                android:padding="10dp"
                android:src="@drawable/ic_reels_comment"
                android:tint="@android:color/white" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/postPreviewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="6"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

</LinearLayout>


